ToReach version 0.1:
    - Build MVC base structure