@@ -1,0 +1,14 @@
+<?php
+
+class DefaultController
+{
+    public function home()
+    {
+        echo 'pop';
+    }
+
+    public function notFound()
+    {
+        echo 'toto';
+    }
+}
