@@ -1,0 +1,4 @@
+<?php
+
+$AVAILABLE_LANGUAGES = ['fr', 'en'];
+$ABSOLUTE_URL = 'http://localhost/ToDoList/';
