@@ -1,0 +1,8 @@
+<?php
+class ViewModel
+{
+    public function __construct($template, $view, array $data = [])
+    {
+
+    }
+}
